# camtom-kyb-agencia-aduanal

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/data/sat/: README.md
backend/data/sat/articulo-69-cff/: README.md
backend/data/sat/articulo-69b-bis-cff/: Listado_69_B_Bis_Completo.csv  Listado_69_B_Bis_Definitivo.csv  Listado_69_B_Bis_SentenciaFa.csv  README.md
backend/data/sat/articulo-69b-cff/: Definitivos.csv  Desvirtuados.csv  Presuntos.csv  README.md  SentenciasFavorables.csv
backend/scripts/: download_sat_data.py  generate_demo_pdfs.py  import_sat_data.py  seed_demo.py  seed_demo_data.py
backend/src/: main.py
backend/src/api/: deps.py
backend/src/api/routers/: admin.py  documentos.py  expedientes.py
backend/src/domain/: rfc.py
backend/src/services/: evaluation_service.py  reconciliation_service.py
backend/src/tests/: conftest.py  test_acciones.py  test_admin_router.py  test_ai_schemas.py  test_classify.py  test_demo_seed.py  test_documentos_router.py  test_e2e_scenarios.py  test_evaluation_factores_detail.py  test_evaluation_service.py  test_expedientes_router.py  test_extract.py  test_harness.py  test_lifecycle.py  test_pdf_extract.py  test_reconcile.py  test_reconciliation_service.py  test_revisar_documento.py  test_rfc.py  test_sat_ingest.py  test_sat_lookup.py  test_sat_parsers.py  test_scoring_engine.py  test_scoring_factors_completitud.py  test_scoring_factors_discrepancias.py  test_scoring_factors_sat.py  test_similarity.py  test_upload_endpoint.py
docs/: email-draft.md  (+1 more)
(+72 files in other folders)
