[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.138.1",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "pytesseract>=0.3.13",
    "pytest>=9.1.1",
    "supabase>=2.31.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
